moved test to controller package